fixed header vertical align

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,9 +1,5 @@
 @media (max-width: 1155px) {
 
-	.presentation__text {
-		margin-bottom: 39px;
-	}
-
 	.action-hide {
 		display: none;
 	}
@@ -14,6 +10,7 @@
 
 	.presentation__text {
 		font-size: 14px;
+		margin-bottom: 85px;
 	}
 
 }
@@ -44,10 +41,6 @@
 
 @media (max-width: 637px) {
 
-	.presentation__text {
-		margin-bottom: 73px;
-	}
-
 	.header__indicators {
 		justify-content: center;
 		width: 100%;
@@ -59,6 +52,7 @@
 
 	.presentation__text {
 		font-size: 11px;
+		margin-bottom: 115px;
 	}
 	
 	.indicators__pwr-reserve {
